Fix warnings: "member call on null pointer of type"

https://bugzilla.mozilla.org/show_bug.cgi?id=1167119